--- a/co.elrashid.xam.tf.Incp.and/Properties/AndroidManifest.xml
+++ b/co.elrashid.xam.tf.Incp.and/Properties/AndroidManifest.xml
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="co.elrashid.xam.tf.Incp.and.co.elrashid.xam.tf.Incp.and" android:versionCode="1" android:versionName="1.0">
-  <uses-sdk android:minSdkVersion="16" />
-  <application android:label="co.elrashid.xam.tf.Incp.and"></application>
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="co.elrashid.xam.tf.Incp.and.co.elrashid.xam.tf.Incp.and" android:versionCode="1" android:versionName="1.0" android:installLocation="auto">
+	<uses-sdk android:minSdkVersion="16" />
+	<uses-permission android:name="android.permission.CAMERA" />
+	<uses-permission android:name="android.permission.CAPTURE_VIDEO_OUTPUT" />
+	<application android:label="co.elrashid.xam.tf.Incp.and"></application>
 </manifest>
